manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ballmouse
spec:
  selector:
    matchLabels:
      app: ballmouse
  template:
    metadata:
      labels:
        app: ballmouse
    spec:
      containers:
      - name: ballmouse
        image: ballmouse
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
          name: web
