manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ballmouse
  name: ballmouse
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: ballmouse
