manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: ballmouse
  name: ballmouse
spec:
  hostnames:
    - ballmouse.byhe.me
  
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sadcloud
      sectionName: https
  rules:
    - backendRefs:
        - name: ballmouse
          port: 80
